# noteagator

./: .gitattributes  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
noteagator_user_guide/navigation/: 1.base.md  2.edit.md  3.ls.md  4.cd.md
noteagator_user_guide/printing_notes/: 1.print.md  2.copy.md  3.replace.md  4.format.md
noteagator_user_guide/yaml_front_matter/: description.md  format.md  placeholders.md
src/noteagator/: config.py  fsutils.py  main.py  note.py  print_utils.py
src/noteagator/commands/: dir.py  notes.py
tests/unit/: test_config.py  test_fsutils.py  test_note.py  test_print_utils.py  test_resolve_cd_target.py
